--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@adonisjs/session": "^1.0.27",
     "@adonisjs/shield": "^1.0.8"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "sqlite3": "^4.0.2"
+  },
   "autoload": {
     "App": "./app"
   }
